<resources>
    <string name="app_name">影视分享</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="zuixingshangy">最新上映</string>
    <string name="omeipaihang">欧美排行</string>
    <string name="xitoshezi">系统设置</string>
    <string name="jijianshangying">即将上映</string>
    <string name="wodeshouchang">我的收藏</string>
    <string name="dianyingxiangqing">电影详情</string>
</resources>